# elf-utils

./: Cargo.toml  LICENSE  README.md
src/: dynamic.rs  elf.rs  hash.rs  lib.rs  load.rs  note.rs  prog_hdr.rs  section_hdr.rs  strtab.rs  symtab.rs
src/reloc/: mod.rs  x86.rs  x86_64.rs
tests/: system_tests.rs
tests/data/: mod.rs
tests/data/dynamic/: mod.rs
tests/data/dynamic/i386/: ld-elf32.so.1  ld-elf32.so.1.reloc  mod.rs
tests/data/dynamic/x86_64/: ld-elf.so.1  ld-elf.so.1.reloc  mod.rs
tests/data/executable/x86_64/: mod.rs  ps
tests/data/relocatable/i386/: mod.rs
tests/data/relocatable/x86_64/: mod.rs
tests/system/: mod.rs
tests/system/relocate/: mod.rs
tests/system/relocate/dynamic/elf32/: mod.rs
tests/system/relocate/dynamic/elf64/: mod.rs
tests/system/traverse/: mod.rs
tests/system/traverse/dynamic/elf32/: mod.rs
tests/system/traverse/dynamic/elf64/: mod.rs
tests/system/traverse/executable/: mod.rs
tests/system/traverse/executable/elf64/: mod.rs
tests/system/traverse/relocatable/: mod.rs
tests/system/traverse/relocatable/elf32/: mod.rs
tests/system/traverse/relocatable/elf64/: mod.rs
tests/unit/: hash.rs  mod.rs  note.rs  strtab.rs
tests/unit/dynamic/: elf32.rs  elf64.rs
tests/unit/elf/: elf32.rs  elf64.rs
tests/unit/prog_hdr/: elf32.rs  elf64.rs
tests/unit/reloc/: mod.rs  x86.rs  x86_64.rs
tests/unit/reloc/rel/: elf32.rs
tests/unit/reloc/rela/: elf64.rs
tests/unit/section_hdr/: elf32.rs  elf64.rs
tests/unit/symtab/: elf32.rs  elf64.rs  mod.rs
