[package]
name = "elf-utils"
version = "0.0.0"
authors = [ "Eric McCorkle <eric@metricspace.net>" ]
license = "3BSD"
keywords = ["elf", "binary"]
exclude = [
    ".gitignore"
]
edition = "2018"

[dependencies]
byteorder = { version = "1.3.4", default-features = false }

[features]
builder = ["alloc"]
alloc = []
